<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/cornerradius"
    app:cardBackgroundColor="@color/cardColor"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/side_margin"
    android:layout_height="@dimen/card_height"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_dimention"
            android:layout_height="@dimen/logo_dimention"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/toplearner" />

        <TextView
            android:id="@+id/hourstxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/cardtextmargin"
            android:layout_marginLeft="@dimen/cardtextmargin"

            android:text="@string/hours"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/textsize"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"

            android:text="@string/name"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="@dimen/name_txtsize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countrytxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"

            android:text="@string/country"
            app:layout_constraintStart_toEndOf="@+id/hourstxt"
            app:layout_constraintTop_toBottomOf="@+id/name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>