<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black"
    tools:context=".AddActivity">



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/projectlinkinputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:hint="@string/project_link_hint"



android:textColorHint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailaddressinputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/projectlink"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailaddressinputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:textColorHint="@android:color/black"
        app:hintTextColor="@android:color/holo_orange_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:hint="@string/email_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameinputlayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailaddress"
android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/lastnameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColorHint="@android:color/black"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:hint="@string/last_namehint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <com.google.android.material.textfield.TextInputEditText

            android:id="@+id/lastname"
            android:textColor="@android:color/black"
            android:background="@android:color/white"
            android:layout_width="@dimen/name_input_width"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"

            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/addactivitytoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:src="@drawable/gads" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/project_submission"
                    android:textColor="@color/projectsubmissiontxtcolor"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="8dp"
                    android:src="@drawable/gradient" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstnameinputlayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textColorHint="@android:color/black"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="70dp"
        android:hint="@string/first_namehint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="@dimen/name_input_width"

            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
android:background="@android:color/white"
            tools:layout_editor_absoluteX="78dp"
            tools:layout_editor_absoluteY="251dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitbutton"

        android:layout_width="@dimen/submit_button_width"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/submit_buttontxt"
      android:elevation="@dimen/card_elevation"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:cornerRadius="@dimen/button_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectlinkinputlayout" />


</androidx.constraintlayout.widget.ConstraintLayout>